--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ var breeze_prefetch = {"local_url":"https:\/\/www.cryptocoinhalal.com","ignore_r
 <div class="hidden px-2 lg:px-4 py-2.5 leading-snug lg:!leading-normal align-middle border-b border-black/10 text-xs md:table-cell lg:py-4 xl:py-6 2xl:py-8 lg:text-sm xl:text-base 2xl:text-lg">
     <div class="block overflow-hidden sm:max-w-[200px] xl:max-w-screen-xs 2xl:max-w-screen-sm sm:max-h-8 md:max-h-9 lg:max-h-11 xl:max-h-[3.25rem] 2xl:max-h-14">
         
-<p>BTC is a straightforward cryptocurrency and has been deemed permissible by many scholars (though some do disagree. See this article). It is best understood at this point as a digital asset (as opposed to a currency just yet) and as such delayed delivery/receipt of BTC is permissible.</p>
+<p>BTC is a straightforward cryptocurrency and has been deemed permissible by many scholars. It is best understood at this point as a digital asset (as opposed to a currency just yet) and as such delayed delivery/receipt of BTC is permissible.</p>
     </div>
 </div>
 
