update fixing broken links

--- a/pages/crypto_haram.html
+++ b/pages/crypto_haram.html
@@ -7,7 +7,7 @@
     <meta name="description" content=" Koin Kripto Halal, Bitcoin halal, Ethereum halal, list crypto halal, aset crypto halal, apakah cryptocurrency halal?, apakah mata uang kripto halal ">
     <link rel="stylesheet" href="/static/theme.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/content/static/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     <link id="theme-stylesheet" rel="stylesheet" href="/static/light-theme.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
@@ -123,7 +123,7 @@
 <ul>
 <li>Pernyataan ini juga salah besar dan membuktikan yang memberikan pernyataan belum paham bagaimana aset crypto bekerja. Saya beri contoh paling simple <a href="/crypto/ethereum.html">Ethereum</a>, ethereum berbeda dengan bitcoin karena coin ini sebenarnya seperti platform. </li>
 <li>Gambaran sederhananya seperti sistem operasi komputer, saat ini yang populer ada Windows, ada MAC OS, ada Linux. Di atas sistem operasi ini siapa saja bisa membuat aplikasi yang bisa dipakai oleh semua orang. Analogi yang lain seperti Android, semua orang bisa bikin mobile app dan kemudian di upload di Android Play store dan orang bisa mendownload dan memakainya. </li>
-<li>Semakin banyak penggunanya maka otomatis sistem operasi itu semakin populer, nah Ethereum ya seperti Windows atau Android tadi dengan konsep <a href="/tech/smart-contract.html">smart contractnya</a>. Bedanya siapapun yang mau mengembangkan aplikasi di atas ethereum maka mereka harus menggunakan coin Ethereum untuk menjalankannya. </li>
+<li>Semakin banyak penggunanya maka otomatis sistem operasi itu semakin populer, nah Ethereum ya seperti Windows atau Android tadi dengan konsep <a href="/tech/smart-contracts.html">smart contractnya</a>. Bedanya siapapun yang mau mengembangkan aplikasi di atas ethereum maka mereka harus menggunakan coin Ethereum untuk menjalankannya. </li>
 <li>Jadi kalau ekosistem atau user dari ethereum semakin banyak, pengembang aplikasi di atas ethereum semakin banyak maka demands dari coin ethereum semakin meningkat. </li>
 <li>Dan itu bukan zero sum game karena jelas itu profitnya dan return nya. Misal berapa persen fee yang dibayarkan user menjadi penghasilan bagi <a href="/tech/mining.html">miner</a> atau <a href="/tech/staking.html">validator/staker</a> dan sebagainya. </li>
 <li>Coba bisa pelajari <a href="https://tokenterminal.com/terminal">Token Terminal</a> agar baham bagaimana fundamental dari tiap-tiap proyek crypto</li>
