--- a/crypto/chainlink.html
+++ b/crypto/chainlink.html
@@ -7,7 +7,7 @@
     <meta name="description" content=" Koin Kripto Halal, Bitcoin halal, Ethereum halal, list crypto halal, aset crypto halal, apakah cryptocurrency halal?, apakah mata uang kripto halal ">
     <link rel="stylesheet" href="/static/theme.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/content/static/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     <link id="theme-stylesheet" rel="stylesheet" href="/static/light-theme.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
@@ -77,7 +77,7 @@
 
     <hr>
 <h2>Chainlink (LINK)</h2>
-<p>Chainlink adalah jaringan oracle terdesentralisasi yang bertujuan untuk menghubungkan <a href="/tech/smart-contracs.html">kontrak pintar</a> dengan data dunia nyata. Chainlink memungkinkan <a href="/tech/blockchain.html">blockchain</a> untuk berinteraksi dengan data eksternal dengan cara yang aman dan terpercaya. Kegunaan nyata dari Chainlink adalah misal bagaimana di dalam jaringan crypto kita bisa mengetahui data real time harga dari stock, atau harga mata uang negara di seluruh dunia secara real time? nah Chainlink gunanya disitu. </p>
+<p>Chainlink adalah jaringan oracle terdesentralisasi yang bertujuan untuk menghubungkan <a href="/tech/smart-contracts.html">kontrak pintar</a> dengan data dunia nyata. Chainlink memungkinkan <a href="/tech/blockchain.html">blockchain</a> untuk berinteraksi dengan data eksternal dengan cara yang aman dan terpercaya. Kegunaan nyata dari Chainlink adalah misal bagaimana di dalam jaringan crypto kita bisa mengetahui data real time harga dari stock, atau harga mata uang negara di seluruh dunia secara real time? nah Chainlink gunanya disitu. </p>
 <h3>Cara Kerja Chainlink</h3>
 <ol>
 <li><strong>Oracles</strong>: Chainlink menggunakan oracles untuk mengambil data dari luar blockchain dan menyediakannya kepada kontrak pintar.</li>
