--- a/crypto/optimism.html
+++ b/crypto/optimism.html
@@ -7,7 +7,7 @@
     <meta name="description" content=" Koin Kripto Halal, Bitcoin halal, Ethereum halal, list crypto halal, aset crypto halal, apakah cryptocurrency halal?, apakah mata uang kripto halal ">
     <link rel="stylesheet" href="/static/theme.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/content/static/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     <link id="theme-stylesheet" rel="stylesheet" href="/static/light-theme.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
@@ -77,7 +77,7 @@
 
     <hr>
 <h2>Optimism (OP)</h2>
-<p>Optimism adalah solusi <a href="/tech/layar-2.html">layer-2</a> untuk Ethereum yang bertujuan untuk meningkatkan skalabilitas dan mengurangi biaya transaksi. Solusi ini menggunakan teknologi rollup untuk memproses transaksi secara lebih efisien.</p>
+<p>Optimism adalah solusi <a href="/tech/layer-2.html">layer-2</a> untuk Ethereum yang bertujuan untuk meningkatkan skalabilitas dan mengurangi biaya transaksi. Solusi ini menggunakan teknologi rollup untuk memproses transaksi secara lebih efisien.</p>
 <h3>Cara Kerja Optimism</h3>
 <ol>
 <li><strong>Optimistic Rollups</strong>: Mengkonsolidasi transaksi di luar rantai utama Ethereum, sebelum menyelesaikannya di Ethereum.</li>
