--- a/tech/consensus.html
+++ b/tech/consensus.html
@@ -7,7 +7,7 @@
     <meta name="description" content=" Koin Kripto Halal, Bitcoin halal, Ethereum halal, list crypto halal, aset crypto halal, apakah cryptocurrency halal?, apakah mata uang kripto halal ">
     <link rel="stylesheet" href="/static/theme.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/content/static/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     <link id="theme-stylesheet" rel="stylesheet" href="/static/light-theme.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
@@ -77,7 +77,7 @@
 
     <hr>
 <h2>Konsensus dalam Blockchain</h2>
-<p>Konsensus dalam <a href="blockchain.html">blockchain</a> adalah proses yang digunakan untuk mencapai kesepakatan dalam jaringan <a href="centralized_vs_decentralized.html">desentralisasi</a>. Tujuannya adalah untuk memvalidasi transaksi dan menjaga keamanan serta integritas jaringan.</p>
+<p>Konsensus dalam <a href="blockchain.html">blockchain</a> adalah proses yang digunakan untuk mencapai kesepakatan dalam jaringan <a href="centralized-vs-decentralized.html">desentralisasi</a>. Tujuannya adalah untuk memvalidasi transaksi dan menjaga keamanan serta integritas jaringan.</p>
 <p><img alt="Contoh Consensus" src="/static/pow.png"></p>
 <h3>Cara Kerja Konsensus</h3>
 <ol>
