fixing broken links

--- a/crypto/grt.html
+++ b/crypto/grt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Coin Halal - Ethereum</title>
+    <title>Crypto Coin Halal - The Graph (GRT)</title>
     <meta name="description" content=" Koin Kripto Halal, Bitcoin halal, Ethereum halal, list crypto halal, aset crypto halal, apakah cryptocurrency halal?, apakah mata uang kripto halal ">
     <link rel="stylesheet" href="/static/theme.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
@@ -72,33 +72,20 @@
 
 
     <div class="container mt-4">
-    <h1>Ethereum</h1>
+    <h1>The Graph (GRT)</h1>
     
 
     <hr>
-<h2>Ethereum (ETH)</h2>
-<p>Ethereum adalah platform <a href="/tech/blockchain.html">blockchain</a> yang <a href="https://drive.google.com/file/d/1tu6ihSzG64LdI41pj5C82fw8YFcW26F0/view?usp=sharing">diusulkan pertama kali oleh Vitalik Buterin dan dikembangkan pada tahun 2015</a>. Tidak seperti <a href="bitcoin.html">Bitcoin</a>, Ethereum tidak hanya berfungsi sebagai mata uang digital, tetapi juga memungkinkan penggunaannya untuk <a href="/tech/smart-contracts.html">kontrak pintar/smart contracts</a> dan aplikasi terdesentralisasi (DApps).</p>
-<h3>Konsep dan Fitur Utama Ethereum</h3>
+<h2>The Graph (GRT)</h2>
+<p>The Graph adalah protokol indeksasi dan pertanyaan untuk mengambil data dari berbagai <a href="/tech/blockchain.html">blockchain</a>. Ini memungkinkan pengembangan aplikasi <a href="/tech/centralized-vs-decentralized.html">terdesentralisasi</a> yang lebih efisien dengan menyediakan akses cepat dan mudah ke data blockchain.</p>
+<h3>Fitur Utama The Graph</h3>
 <ol>
-<li><strong>Kontrak Pintar</strong>: Ini adalah kode program yang secara otomatis melaksanakan syarat-syarat kontrak ketika kondisi tertentu terpenuhi. Mereka beroperasi di atas blockchain Ethereum, menawarkan keamanan dan transparansi.</li>
-<li><strong>Ethereum Virtual Machine (EVM)</strong>: Merupakan inti dari Ethereum, memungkinkan pembuatan dan operasi kontrak pintar.</li>
-<li><strong>Ether (ETH)</strong>: Mata uang digital yang digunakan dalam jaringan Ethereum. Ini digunakan untuk membayar transaksi dan layanan operasional.</li>
-<li><strong>Desentralisasi</strong>: Sama seperti Bitcoin, Ethereum dioperasikan dalam <a href="/tech/centralized-vs-decentralized.html">jaringan desentralisasi, mengurangi risiko kegagalan sentral dan manipulasi</a>.</li>
-<li><strong>DApps</strong>: Aplikasi yang berjalan pada jaringan Ethereum, menggunakan kontrak pintar untuk menjalankan fungsi-fungsinya.</li>
+<li><strong>Indeksasi Data</strong>: The Graph memungkinkan indeksasi data dari blockchain seperti Ethereum, memudahkan pengambilan informasi yang diperlukan.</li>
+<li><strong>Query dengan GraphQL</strong>: Penggunaan GraphQL mempermudah pengembang untuk membuat pertanyaan yang kompleks dan mendapatkan data yang mereka butuhkan dengan cepat.</li>
+<li><strong>Token GRT</strong>: Token asli The Graph, digunakan untuk memotivasi dan menghargai operator indeks yang memelihara dan memproses data untuk jaringan.</li>
 </ol>
-<h3>Ethereum dalam Konteks Indonesia</h3>
-<p>Ethereum memiliki potensi besar dalam berbagai bidang di Indonesia, termasuk keuangan, pendidikan, kesehatan, dan pemerintahan. Dengan menggunakan kontrak pintar, proses yang biasanya memerlukan perantara dapat disederhanakan, mengurangi biaya dan meningkatkan efisiensi.</p>
-<h3>Masa Depan Ethereum</h3>
-<p>Dengan komunitas yang terus berkembang dan inovasi yang konstan, Ethereum berpotensi menjadi salah satu platform blockchain utama di dunia. Kemampuannya untuk mendukung kontrak pintar dan DApps membuatnya tidak hanya sebagai mata uang digital, tetapi juga sebagai dasar untuk aplikasi blockchain masa depan. Saat ini buanyak sekali proyek-proyek <a href="/tech/defi.html">DeFi</a> maupun <a href="/tech/nft.html">NFT</a> yang berjalan di atas Ethereum.</p>
-<p>Dengan fitur-fitur inovatifnya, Ethereum menawarkan lebih dari sekadar transaksi keuangan digital. Ia membuka jalan bagi era baru teknologi terdesentralisasi.</p>
-<h3>Ethereum jelas halal.</h3>
-<p>Ethereum berbeda dengan bitcoin karena coin ini sebenarnya seperti platform. </p>
-<ul>
-<li>Gambaran sederhananya seperti sistem operasi komputer, saat ini yang populer ada Windows, ada MAC OS, ada Linux. Di atas sistem operasi ini siapa saja bisa membuat aplikasi yang bisa dipakai oleh semua orang. Analogi yang lain seperti Android, semua orang bisa bikin mobile app dan kemudian di upload di Android Play store dan orang bisa mendownload dan memakainya. </li>
-<li>Semakin banyak penggunanya maka otomatis sistem operasi itu semakin populer, nah Ethereum ya seperti Windows atau Android tadi dengan konsep <a href="/tech/smart-contracts.html">smart contractnya</a>. Bedanya siapapun yang mau mengembangkan aplikasi di atas ethereum maka mereka harus menggunakan coin Ethereum untuk menjalankannya. </li>
-<li>Jadi kalau ekosistem atau user dari ethereum semakin banyak, pengembang aplikasi di atas ethereum semakin banyak maka demands dari coin ethereum semakin meningkat. </li>
-<li>Coba bisa pelajari <a href="https://tokenterminal.com/terminal">Token Terminal</a> agar baham bagaimana fundamental dari tiap-tiap proyek crypto</li>
-</ul>
+<h3>The Graph jelas Halal</h3>
+<p>Seperti halnya <a href="/crypto/chainlink.html">Chainlink</a>, the graph ini focusnya ke teknologi di blockchain. Bayangin saja bagaimana hidup kita kalau tidak ada Google, dengan adanya Google kita dengan mudah untuk mencari informasi di Internet. Itu karena Google melakukan indexing ke semua halaman di Internet dan membuat aplikasi search engine, sehingga kita tinggal cukup ketik keyword di Google untuk mencari informasi yang kita inginkan. Nah GRT ini Googlenya di Blockchain analogi sederhananya.</p>
 
     </div>
 
