--- a/tech/bitcoin-lightning-network.html
+++ b/tech/bitcoin-lightning-network.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Coin Halal - Ethereum</title>
+    <title>Crypto Coin Halal - Mengenal Bitcoin Lightning Network</title>
     <meta name="description" content=" Koin Kripto Halal, Bitcoin halal, Ethereum halal, list crypto halal, aset crypto halal, apakah cryptocurrency halal?, apakah mata uang kripto halal ">
     <link rel="stylesheet" href="/static/theme.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
@@ -72,33 +72,22 @@
 
 
     <div class="container mt-4">
-    <h1>Ethereum</h1>
+    <h1>Mengenal Bitcoin Lightning Network</h1>
     
 
     <hr>
-<h2>Ethereum (ETH)</h2>
-<p>Ethereum adalah platform <a href="/tech/blockchain.html">blockchain</a> yang <a href="https://drive.google.com/file/d/1tu6ihSzG64LdI41pj5C82fw8YFcW26F0/view?usp=sharing">diusulkan pertama kali oleh Vitalik Buterin dan dikembangkan pada tahun 2015</a>. Tidak seperti <a href="bitcoin.html">Bitcoin</a>, Ethereum tidak hanya berfungsi sebagai mata uang digital, tetapi juga memungkinkan penggunaannya untuk <a href="/tech/smart-contracts.html">kontrak pintar/smart contracts</a> dan aplikasi terdesentralisasi (DApps).</p>
-<h3>Konsep dan Fitur Utama Ethereum</h3>
+<h2>Bitcoin Lightning Network</h2>
+<p>Bitcoin Lightning Network adalah solusi skalabilitas lapis kedua yang dibangun di atas blockchain <a href="/crypto/bitcoin.html">Bitcoin</a>. Tujuannya adalah untuk memungkinkan transaksi yang lebih cepat dan lebih murah, sambil mempertahankan keamanan jaringan Bitcoin.</p>
+<p><img alt="Lightning Network" src="/static/lightning-network.png"></p>
+<h3>Cara Kerja Bitcoin Lightning Network</h3>
 <ol>
-<li><strong>Kontrak Pintar</strong>: Ini adalah kode program yang secara otomatis melaksanakan syarat-syarat kontrak ketika kondisi tertentu terpenuhi. Mereka beroperasi di atas blockchain Ethereum, menawarkan keamanan dan transparansi.</li>
-<li><strong>Ethereum Virtual Machine (EVM)</strong>: Merupakan inti dari Ethereum, memungkinkan pembuatan dan operasi kontrak pintar.</li>
-<li><strong>Ether (ETH)</strong>: Mata uang digital yang digunakan dalam jaringan Ethereum. Ini digunakan untuk membayar transaksi dan layanan operasional.</li>
-<li><strong>Desentralisasi</strong>: Sama seperti Bitcoin, Ethereum dioperasikan dalam <a href="/tech/centralized-vs-decentralized.html">jaringan desentralisasi, mengurangi risiko kegagalan sentral dan manipulasi</a>.</li>
-<li><strong>DApps</strong>: Aplikasi yang berjalan pada jaringan Ethereum, menggunakan kontrak pintar untuk menjalankan fungsi-fungsinya.</li>
+<li><strong>Pembuatan Saluran Pembayaran</strong>: Pengguna membuka saluran pembayaran dengan mengunci sejumlah Bitcoin di blockchain. Saluran ini memungkinkan transaksi cepat di luar rantai utama.</li>
+<li><strong>Transaksi Cepat dan Murah</strong>: Transaksi dilakukan hampir secara instan dengan biaya yang sangat rendah, karena tidak perlu konfirmasi di seluruh jaringan Bitcoin.</li>
+<li><strong>Penyelesaian di Blockchain</strong>: Saluran dapat ditutup kapan saja oleh salah satu pihak, dan saldo akhir akan ditetapkan di blockchain Bitcoin.</li>
 </ol>
-<h3>Ethereum dalam Konteks Indonesia</h3>
-<p>Ethereum memiliki potensi besar dalam berbagai bidang di Indonesia, termasuk keuangan, pendidikan, kesehatan, dan pemerintahan. Dengan menggunakan kontrak pintar, proses yang biasanya memerlukan perantara dapat disederhanakan, mengurangi biaya dan meningkatkan efisiensi.</p>
-<h3>Masa Depan Ethereum</h3>
-<p>Dengan komunitas yang terus berkembang dan inovasi yang konstan, Ethereum berpotensi menjadi salah satu platform blockchain utama di dunia. Kemampuannya untuk mendukung kontrak pintar dan DApps membuatnya tidak hanya sebagai mata uang digital, tetapi juga sebagai dasar untuk aplikasi blockchain masa depan. Saat ini buanyak sekali proyek-proyek <a href="/tech/defi.html">DeFi</a> maupun <a href="/tech/nft.html">NFT</a> yang berjalan di atas Ethereum.</p>
-<p>Dengan fitur-fitur inovatifnya, Ethereum menawarkan lebih dari sekadar transaksi keuangan digital. Ia membuka jalan bagi era baru teknologi terdesentralisasi.</p>
-<h3>Ethereum jelas halal.</h3>
-<p>Ethereum berbeda dengan bitcoin karena coin ini sebenarnya seperti platform. </p>
-<ul>
-<li>Gambaran sederhananya seperti sistem operasi komputer, saat ini yang populer ada Windows, ada MAC OS, ada Linux. Di atas sistem operasi ini siapa saja bisa membuat aplikasi yang bisa dipakai oleh semua orang. Analogi yang lain seperti Android, semua orang bisa bikin mobile app dan kemudian di upload di Android Play store dan orang bisa mendownload dan memakainya. </li>
-<li>Semakin banyak penggunanya maka otomatis sistem operasi itu semakin populer, nah Ethereum ya seperti Windows atau Android tadi dengan konsep <a href="/tech/smart-contracts.html">smart contractnya</a>. Bedanya siapapun yang mau mengembangkan aplikasi di atas ethereum maka mereka harus menggunakan coin Ethereum untuk menjalankannya. </li>
-<li>Jadi kalau ekosistem atau user dari ethereum semakin banyak, pengembang aplikasi di atas ethereum semakin banyak maka demands dari coin ethereum semakin meningkat. </li>
-<li>Coba bisa pelajari <a href="https://tokenterminal.com/terminal">Token Terminal</a> agar baham bagaimana fundamental dari tiap-tiap proyek crypto</li>
-</ul>
+<p>Bitcoin Lightning Network menawarkan solusi untuk masalah skalabilitas Bitcoin dengan memungkinkan lebih banyak transaksi tanpa membebani blockchain utama. Ini sangat berguna untuk transaksi kecil atau mikrotransaksi, yang menjadi tidak praktis di blockchain utama karena biaya dan waktu konfirmasi.</p>
+<p>Untuk lebih memahami Bitcoin Lightning Network, Anda dapat membaca berbagai artikel yang tersedia online atau menonton video di YouTube yang menjelaskan teknologi ini lebih lanjut.</p>
+<p>Kunjungi juga halaman kami tentang <a href="blockchain.html">Blockchain</a> untuk mempelajari lebih lanjut mengenai teknologi dasar di balik Bitcoin dan Lightning Network.</p>
 
     </div>
 
