added robot.txt and sitemap to make the website more seo friendly

--- a/crypto/polkadot.html
+++ b/crypto/polkadot.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypto Coin Halal - Apa itu Polkadot?</title>
     <meta name="description" content=" Koin Kripto Halal, Bitcoin halal, Ethereum halal, list crypto halal, aset crypto halal, apakah cryptocurrency halal?, apakah mata uang kripto halal ">
-    <link rel="stylesheet" href="/static/theme.css">
-    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cryptocoinhalal.com/static/theme.css">
+    <link rel="icon" href="https://cryptocoinhalal.com/static/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
-    <link id="theme-stylesheet" rel="stylesheet" href="/static/light-theme.css">
+    <link id="theme-stylesheet" rel="stylesheet" href="https://cryptocoinhalal.com/static/light-theme.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
   
@@ -31,12 +31,12 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="/pages/about.html">Tentang Situs Ini</a>
-                    <a class="nav-item nav-link" href="/pages/crypto_haram.html">Crypto Haram?</a>
-                    <a class="nav-item nav-link" href="/pages/analis.html">Analis</a>
+                    <a class="nav-item nav-link active" href="https://cryptocoinhalal.com/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="https://cryptocoinhalal.com/pages/about.html">Tentang Situs Ini</a>
+                    <a class="nav-item nav-link" href="https://cryptocoinhalal.com/pages/crypto_haram.html">Crypto Haram?</a>
+                    <a class="nav-item nav-link" href="https://cryptocoinhalal.com/pages/analis.html">Analis</a>
                     <a class="nav-item nav-link" href="https://forms.gle/yn4o368bneqkx3AKA" target="_blank">Permintaan Analisis</a>
-                    <a class="nav-item nav-link" href="/pages/contact_donation.html">Kontak</a>
+                    <a class="nav-item nav-link" href="https://cryptocoinhalal.com/pages/contact_donation.html">Kontak</a>
                 </div>
             </div>
         </div>
@@ -50,15 +50,15 @@
             var body = document.body;
             var navbar = document.querySelector('.navbar'); // Add this line to select the navbar
 
-            if (themeStylesheet.getAttribute('href') == '/static/light-theme.css') {
-                themeStylesheet.setAttribute('href', '/static/dark-theme.css');
+            if (themeStylesheet.getAttribute('href') == 'https://cryptocoinhalal.com/static/light-theme.css') {
+                themeStylesheet.setAttribute('href', 'https://cryptocoinhalal.com/static/dark-theme.css');
                 themeIcon.classList.remove('bi-moon');
                 themeIcon.classList.add('bi-sun');
                 body.classList.add('dark-theme');
                 navbar.classList.remove('navbar-light', 'bg-light'); // Remove light theme classes
                 navbar.classList.add('navbar-dark', 'bg-dark'); // Add dark theme classes
             } else {
-                themeStylesheet.setAttribute('href', '/static/light-theme.css');
+                themeStylesheet.setAttribute('href', 'https://cryptocoinhalal.com/static/light-theme.css');
                 themeIcon.classList.remove('bi-sun');
                 themeIcon.classList.add('bi-moon');
                 body.classList.remove('dark-theme');
