--- a/islam/gharar.html
+++ b/islam/gharar.html
@@ -117,8 +117,9 @@ Bagi kami semua transaksi di blockchain itu malah transparant dan tujuan utama m
     });
 </script>
 
-<div style="text-align: center; display: flex; justify-content: center;">
-    <div class="fb-comments" data-href="https://cryptocoinhalal.com/" data-width="100%" data-numposts="5" style="margin: auto;"></div>
+<div class="fb-comments-container">
+    <div class="fb-comments" data-href="https://cryptocoinhalal.com/" data-width="100%" data-numposts="5"></div>
 </div>
+
 </body>
 </html>
