--- a/tech/poh.html
+++ b/tech/poh.html
@@ -113,8 +113,9 @@
     });
 </script>
 
-<div style="text-align: center; display: flex; justify-content: center;">
-    <div class="fb-comments" data-href="https://cryptocoinhalal.com/" data-width="100%" data-numposts="5" style="margin: auto;"></div>
+<div class="fb-comments-container">
+    <div class="fb-comments" data-href="https://cryptocoinhalal.com/" data-width="100%" data-numposts="5"></div>
 </div>
+
 </body>
 </html>
