--- a/tech/smart-contracts.html
+++ b/tech/smart-contracts.html
@@ -114,8 +114,9 @@ Gambaran sederhananya seperti sistem operasi komputer, saat ini yang populer ada
     });
 </script>
 
-<div style="text-align: center; display: flex; justify-content: center;">
-    <div class="fb-comments" data-href="https://cryptocoinhalal.com/" data-width="100%" data-numposts="5" style="margin: auto;"></div>
+<div class="fb-comments-container">
+    <div class="fb-comments" data-href="https://cryptocoinhalal.com/" data-width="100%" data-numposts="5"></div>
 </div>
+
 </body>
 </html>
