update content including having page for crypto in finance or economis

--- a/crypto/usdc.html
+++ b/crypto/usdc.html
@@ -77,7 +77,7 @@
 
     <hr>
 <h2>USD Coin (USDC)</h2>
-<p>USD Coin (USDC) adalah stablecoin yang nilainya dipegang pada Dolar AS. USDC dirancang untuk menggabungkan stabilitas mata uang fiat dengan fleksibilitas dan kecepatan cryptocurrency.</p>
+<p>USD Coin (USDC) adalah stablecoin yang nilainya dipegang pada Dolar AS seperti halnya <a href="/crypto/usdt.html">USDT</a>. USDC dirancang untuk menggabungkan stabilitas mata uang fiat dengan fleksibilitas dan kecepatan cryptocurrency.</p>
 <h3>Cara Kerja USDC</h3>
 <ol>
 <li><strong>Stabil dalam Nilai</strong>: Nilai USDC selalu dipegang setara dengan Dolar AS dan punya underlaying USD, mengurangi volatilitas.</li>
