--- a/ekonomi/crypto_bukan_sekuritas.html
+++ b/ekonomi/crypto_bukan_sekuritas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Coin Halal - USD Tether</title>
+    <title>Crypto Coin Halal - Apakah Kripto Merupakan Instrumen Sekuritas?</title>
     <meta name="description" content=" Koin Kripto Halal, Bitcoin halal, Ethereum halal, list crypto halal, aset crypto halal, apakah cryptocurrency halal?, apakah mata uang kripto halal ">
     <link rel="stylesheet" href="https://cryptocoinhalal.com/static/theme.css">
     <link rel="icon" href="https://cryptocoinhalal.com/static/favicon.ico" type="image/x-icon">
@@ -72,26 +72,39 @@
 
 
     <div class="container mt-4">
-    <h1>USD Tether</h1>
+    <h1>Apakah Kripto Merupakan Instrumen Sekuritas?</h1>
     
 
     <hr>
-<h2>Tether (USDT)</h2>
-<p>Tether (USDT) adalah jenis cryptocurrency yang dikenal sebagai 'stablecoin' <a href="https://drive.google.com/file/d/1Rd1nnNHK-i7WmArKDQJ6lK4Slogr3cdj/view?usp=sharing">yang diprakarsai oleeh Tether</a>. Tujuan utamanya adalah untuk menjaga nilai tukarnya tetap stabil dengan mengikat (pegging) nilainya ke mata uang fiat seperti Dolar AS, sehingga mengurangi volatilitas yang sering terlihat di cryptocurrency lain. </p>
-<p>Bagi seorang yang bekerja di luar negeri misalnya di Australia, transfer uang dari Australia ke Indonesia menggunakan crypto bisa selesai dalam waktu kurang dari 5 menit dan uang sudah sampai di Indonesia. Bagaimana caranya? pertama harus deposit AUD ke CEX (Centralized Crypto Exchange) di Australia. Setelah itu AUD tadi bisa dibelikan <a href="/crypto/usdt.html">USDT</a>, setelah itu kirim USDT itu ke CEX yang ada di Indonesia dengan jaringan <a href="/crypto/tron.html">tron</a>, feenya cuman 1 USDT. Kurang dari 5 menit uang sudah sampai di CEX yang ada di Indonesia dan feenya cuman 10 ribu rupiah. Setelah itu USDT tadi ditukar IDR dan dan bisa di withdraw ke akun Bank yang di Indonesia? terus dimana haramnya? Hal ini juga bisa berlaku sebaliknya misal pengiriman uang dari Indonesia ke Australia atau ke negara manapun dan itu bisa 24 jam dalam sehari, weekend pun tetap bisa. </p>
-<h3>Fitur Utama Tether</h3>
+<h2>Pengertian Kripto dan Sekuritas</h2>
+<p>Kripto, atau cryptocurrency, adalah bentuk mata uang digital yang menggunakan kriptografi untuk keamanan. Sementara itu, sekuritas adalah instrumen keuangan yang dapat diperjualbelikan seperti saham, obligasi, dan derivatif. Perdebatan tentang apakah kripto termasuk dalam kategori sekuritas telah menjadi topik hangat di berbagai negara.</p>
+<h3>Apakah Crypto Itu Sekuritas?</h3>
+<p>Secara umum, kripto tidak secara otomatis dianggap sebagai sekuritas. Hal ini bergantung pada karakteristik spesifik dari setiap kripto. Beberapa faktor yang dipertimbangkan termasuk:</p>
 <ol>
-<li><strong>Stablecoin</strong>: USDT dirancang untuk meminimalkan fluktuasi harga, menjadikannya pilihan populer bagi mereka yang mencari stabilitas di pasar crypto yang volatil.</li>
-<li><strong>Pengikatan ke Dolar AS</strong>: Satu USDT, secara teori, selalu bernilai sama dengan satu Dolar AS, memberikan kepercayaan dan stabilitas.</li>
-<li><strong>Transaksi Lintas Batas</strong>: USDT sering digunakan untuk transfer dana lintas batas, menawarkan alternatif yang lebih cepat dan lebih murah dibandingkan dengan transfer bank tradisional.</li>
-<li><strong>Luasnya Penerimaan</strong>: Tether secara luas diterima di berbagai bursa cryptocurrency dan digunakan dalam transaksi perdagangan.</li>
+<li><strong>Intention</strong>: Apakah tujuan dari kripto tersebut untuk dijadikan sebagai investasi?</li>
+<li><strong>Expectation of Profits</strong>: Apakah investor mengharapkan keuntungan dari usaha pihak ketiga?</li>
+<li><strong>How It's Being Sold</strong>: Apakah kripto dijual sebagai cara untuk mendapatkan dana untuk proyek?</li>
 </ol>
-<h3>Tether dan Status Halal atau Haram</h3>
-<p>Analisis status halal atau haram Tether melibatkan beberapa faktor:</p>
+<h3>Perbedaan Antara Crypto dan Saham</h3>
+<p>Investasi dalam kripto berbeda dengan investasi dalam saham. Dalam crypto, investasi tidak melibatkan kontrak investasi atau kontrak sekuritas seperti dalam saham. Isu ini sedang menjadi topik hangat di USA, di mana beberapa proyek crypto yang cukup tersentralisasi dimasukkan dalam kategori sekuritas karena return investasi mereka bergantung pada kerja tim di balik proyek tersebut, mirip dengan saham.</p>
+<p>Namun, kripto seperti <a href="/crypto/bitcoin.html">Bitcoin</a> sangat terdesentralisasi dan tidak dikontrol oleh individu atau kelompok tertentu. Kenaikan harganya bukan karena pengembangan fitur baru oleh pengembang, melainkan oleh faktor pasar, sehingga Bitcoin lebih dianggap sebagai komoditas daripada sekuritas.</p>
+<h3>Contoh Crypto dan Status Sekuritasnya</h3>
+<ul>
+<li><strong><a href="/crypto/bitcoin.html">Bitcoin</a></strong>: Tidak dianggap sebagai sekuritas; lebih ke komoditas.</li>
+<li><strong><a href="/crypto/ethereum.html">Ethereum</a></strong>: Awalnya mungkin dipertimbangkan sebagai sekuritas selama penawaran awal, tetapi sekarang lebih dianggap sebagai komoditas karena desentralisasinya dan penggunaannya.</li>
+<li><strong><a href="/crypto/polkadot.html">Polkadot</a></strong>: Fokus pada interoperabilitas dan tidak dianggap sebagai sekuritas.</li>
+<li><strong><a href="/crypto/solana.html">Solana</a></strong>, <strong><a href="/crypto/cardano.html">Cardano</a></strong>, <strong><a href="/crypto/bnb.html">Binance Smart Chain</a></strong>: Digolongkan sebagai sekuritas oleh beberapa regulator, tetapi status ini sedang diperdebatkan.</li>
+</ul>
+<h3>Kenapa Penting Memahami Status Sekuritas Crypto?</h3>
+<p>Memahami status sekuritas sebuah cryptocurrency penting karena berkaitan dengan regulasi dan perlindungan investor. Jika sebuah kripto dianggap sebagai sekuritas, maka ia harus mematuhi regulasi yang berlaku bagi sekuritas, termasuk pendaftaran dan pengungkapan informasi tertentu.</p>
+<h3>Implikasi Regulasi</h3>
+<p>Regulasi terhadap crypto sebagai sekuritas dapat mempengaruhi cara kripto dijual, dipromosikan, dan dikelola. Hal ini dapat mempengaruhi:</p>
 <ol>
-<li><strong>Stabilitas dan Keamanan</strong>: Sebagai stablecoin yang punya underlaying USD, USDT menawarkan stabilitas dan transparansi yang lebih besar, yang dapat dianggap sesuai dengan prinsip keadilan dalam Islam.</li>
-<li><strong>Penggunaan USDT</strong>: Status halal atau haram Tether juga bergantung pada penggunaannya. Jika digunakan untuk tujuan yang halal dan tidak mendukung aktivitas haram, maka cenderung dianggap halal.</li>
+<li><strong>Akses Investor</strong>: Pembatasan tentang siapa yang bisa membeli atau menjual.</li>
+<li><strong>Pengungkapan Informasi</strong>: Kewajiban untuk memberikan informasi tertentu kepada investor.</li>
+<li><strong>Pengawasan Pasar</strong>: Pengawasan lebih ketat dari regulator.</li>
 </ol>
+<p>Kesimpulannya, status kripto sebagai sekuritas bergantung pada karakteristik dan cara penggunaannya. Penting bagi investor dan pengembang kripto untuk memahami perbedaan ini untuk navigasi hukum dan regulasi yang berlaku.</p>
 
     </div>
 
