--- a/pages/about.html
+++ b/pages/about.html
@@ -89,6 +89,7 @@
 <li><a href="/tech/blockchain-trilemma.html">Trilemma Blockchain</a></li>
 <li><a href="/tech/pow.html">Proof of Work</a></li>
 <li><a href="/tech/mining.html">Mining Bitcoin</a></li>
+<li><a href="/tech/bitcoin-lightning-network.html">Bitcoin Lightning Network</a></li>
 <li><a href="/tech/pos.html">Proof of Stake</a></li>
 <li><a href="/tech/staking.html">Staking</a></li>
 <li><a href="/tech/poh.html">Proof of History</a></li>
@@ -102,6 +103,8 @@
 <li><a href="/tech/erc20.html">ERC 20</a></li>
 <li><a href="/tech/interoperability.html">Interoperabilitas Blockchain</a></li>
 </ol>
+<p>Konsep-konsep crypto di bidang ekonomi dan finance
+1. <a href="/ekonomi/crypto_bukan_sekuritas.html">Apakah semua koin crypto adalah sekuritas?</a></p>
 <p>Konsep-konsep tentang halal-haram aset crypto bisa dibaca di sini:</p>
 <ol>
 <li><a href="/islam/riba.html">Riba</a></li>
