--- a/pages/about.html
+++ b/pages/about.html
@@ -103,8 +103,10 @@
 <li><a href="/tech/erc20.html">ERC 20</a></li>
 <li><a href="/tech/interoperability.html">Interoperabilitas Blockchain</a></li>
 </ol>
-<p>Konsep-konsep crypto di bidang ekonomi dan finance
-1. <a href="/ekonomi/crypto_bukan_sekuritas.html">Apakah semua koin crypto adalah sekuritas?</a></p>
+<p>Konsep-konsep crypto di bidang ekonomi dan finance</p>
+<ol>
+<li><a href="/ekonomi/crypto_bukan_sekuritas.html">Apakah semua koin crypto adalah sekuritas?</a></li>
+</ol>
 <p>Konsep-konsep tentang halal-haram aset crypto bisa dibaca di sini:</p>
 <ol>
 <li><a href="/islam/riba.html">Riba</a></li>
