--- a/pages/crypto_haram.html
+++ b/pages/crypto_haram.html
@@ -98,7 +98,7 @@
 <li>Sama juga seperti uang fiat yang beredar saat ini, juga sering dipakai untuk penipuan, bahkan dikorupsi juga. Jadi ini tidak bisa dijadikan arguman bahwa crypto sebaiknya diharamkan. </li>
 <li>Jadi crypto ya sama seperti uang fiat, atau emas, bisa digunakan untuk hal-hal yang positif dan negatif. Jadi status objeknya ya netral alias mubah</li>
 </ul>
-<h2>Banyak yang rugi karena main crypto</h2>
+<h2>Banyak yang rugi karena "main" crypto</h2>
 <ul>
 <li>
 <p>Rugi karena FOMO, banyak yang rugi juga karena main saham padahal belum paham. Saya pernah baca diberita ada orang yang bunuh diri karena terlilit hutang sebabnya dia pakai uang pinjol untuk all-in di salah satu saham bank syariah terbesar di Indonesia yang waktu itu sedang digoreng. </p>
@@ -107,7 +107,7 @@
 <p>Yang tidak diperbolehkan itu FOMO nya, tindakannya yang bodoh, tidak paham tapi langsung nyemplung. Semua produk aset investasi ada resikonya termasuk crypto itu sendiri. Jadi ini tidak bisa dijadikan arguman crypto jadi haram. </p>
 </li>
 </ul>
-<h2>Kan crypto tidak ada bentuk fisiknya, jadi ya seperti dagang sesuatu yang tidak jelas</h2>
+<h2>Crypto tidak ada bentuk fisiknya, jadi seperti jual/beli sesuatu yang tidak jelas</h2>
 <ul>
 <li>Tidak jelas bisa jadi karena memang tidak jelas atau orangnya belum mampu memahaminya sehingga terlihat tidak jelas. Jika kita belajar tentang konsep aset digital, bagaimana sistem kerja dari <a href="/tech/blockchain.html">blockchain</a> maka kejelasannya akan semakin tampak. </li>
 <li>Sekarang coba bayangkan uang yang kita miliki, saya pribadi ketika tinggal di Australia, saya tidak pernah melihat uang cash karena semua transaksinya sudah pakai apple pay, jadi cukup bawa HP saja kemana-mana, jadi ya sudah tidak ada fisiknya. </li>
@@ -128,7 +128,7 @@
 <li>Dan itu bukan zero sum game karena jelas itu profitnya dan return nya. Misal berapa persen fee yang dibayarkan user menjadi penghasilan bagi <a href="/tech/mining.html">miner</a> atau <a href="/tech/staking.html">validator/staker</a> dan sebagainya. </li>
 <li>Coba bisa pelajari <a href="https://tokenterminal.com/terminal">Token Terminal</a> agar baham bagaimana fundamental dari tiap-tiap proyek crypto</li>
 </ul>
-<h2>Siapapun bisa bikin coin crypto habis itu digoreng goreng but scam atau nipu.</h2>
+<h2>Siapapun bisa membuat coin crypto setelah itu digoreng untuk scam atau menipu.</h2>
 <ul>
 <li>Ini analogi yang sama dengan saham juga, siapapun bisa bikin perusahaan abal-abal, tipu sana tipu sini kemudian IPO untuk digoreng sahamnya, habis dibeli ritel di tinggal aja. </li>
 <li>Jadi hal itu tidak bisa dijadikan argumen haramnya crypto dan halalnya saham bukan? maksudnya di industri crypto ada orang jahat, di saham ada juga orang jahat. </li>
