update content fixing typos

--- a/ekonomi/crypto_bukan_sekuritas.html
+++ b/ekonomi/crypto_bukan_sekuritas.html
@@ -77,9 +77,9 @@
 
     <hr>
 <h2>Pengertian Kripto dan Sekuritas</h2>
-<p>Kripto, atau cryptocurrency, adalah bentuk mata uang digital yang menggunakan kriptografi untuk keamanan. Sementara itu, sekuritas adalah instrumen keuangan yang dapat diperjualbelikan seperti saham, obligasi, dan derivatif. Perdebatan tentang apakah kripto termasuk dalam kategori sekuritas telah menjadi topik hangat di berbagai negara.</p>
+<p>Koin Cripto, atau cryptocurrency, adalah bentuk mata uang digital berbasiskan teknologi <a href="/tech/blockchain.html">blockchain</a>. Sementara itu, sekuritas adalah instrumen keuangan yang dapat diperjualbelikan seperti saham, obligasi, dan derivatif. Perdebatan tentang apakah kripto termasuk dalam kategori sekuritas telah menjadi topik hangat di berbagai negara.</p>
 <h3>Apakah Crypto Itu Sekuritas?</h3>
-<p>Secara umum, kripto tidak secara otomatis dianggap sebagai sekuritas. Hal ini bergantung pada karakteristik spesifik dari setiap kripto. Beberapa faktor yang dipertimbangkan termasuk:</p>
+<p>Secara umum, cripto tidak secara otomatis dianggap sebagai sekuritas. Hal ini bergantung pada karakteristik spesifik dari setiap kripto. Beberapa faktor yang dipertimbangkan termasuk:</p>
 <ol>
 <li><strong>Intention</strong>: Apakah tujuan dari kripto tersebut untuk dijadikan sebagai investasi?</li>
 <li><strong>Expectation of Profits</strong>: Apakah investor mengharapkan keuntungan dari usaha pihak ketiga?</li>
